--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -1,5 +1,5 @@
 pandoc: 2.3.1
-pkgdown: 1.4.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   AnalyzingMultipleDatasets: AnalyzingMultipleDatasets.html
@@ -12,4 +12,5 @@ articles:
   SequenceExtraction: SequenceExtraction.html
   SignalCounting: SignalCounting.html
   SpikeInNormalization: SpikeInNormalization.html
+last_built: 2020-08-28T17:23Z
 
